[package]
name = "pancurses"
description = """
pancurses is a curses libary for Rust that supports both Unix and Windows
platforms by abstracting away the backend that it uses
(ncurses-rs and pdcurses-sys respectively).
"""
homepage = "https://github.com/warwolt/pancurses"
documentation = "https://docs.rs/pancurses"
repository = "https://github.com/warwolt/pancurses"
readme = "README.md"
license = "MIT"
keywords = ["pancurses", "curses", "ncurses", "pdcurses"]
version = "0.16.1"
authors = ["Rasmus Källqvist <rasmus.kallqvist@gmail.com>, Ilkka Halila <ilkka@hali.la>"]

[lib]
name = "pancurses"

[dependencies]
log = "0.4"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
pdcurses-sys = { git = "https://github.com/warwolt/pdcurses-sys-wmcbrine", branch="main" }
winreg = "0.5"
[target.'cfg(unix)'.dependencies]
ncurses = "5.91.0"

[dev-dependencies]
rand = "0.4.2"

[features]
wide = ["ncurses/wide"]
# win32 = ["pdcurses-sys"]
# win32a = ["pdcurses-sys/win32a"]
show_menu = []
disable_resize = []
